refactor(Product): ♻️ turn pipelines from modules into classes
- modules and their inner repositories were static hence not compatible with unit tests
- pipelines as classes are configured in the DI and injected in the Api class

--- a/src/Shopfoo.Product/Shopfoo.Product.fsproj
+++ b/src/Shopfoo.Product/Shopfoo.Product.fsproj
@@ -20,6 +20,7 @@
     <Compile Include="Workflows\SaveProduct.fs" />
     <Compile Include="Data\Prelude.fs" />
     <Compile Include="Data\Helpers.fs" />
+    <Compile Include="Data\InMemoryProductCache.fs" />
     <Compile Include="Data\FakeStore.fs" />
     <Compile Include="Data\OpenLibrary.fs" />
     <Compile Include="Data\Books.fs" />
