--- a/tests/Shopfoo.Product.Tests/Shopfoo.Product.Tests.fsproj
+++ b/tests/Shopfoo.Product.Tests/Shopfoo.Product.Tests.fsproj
@@ -17,6 +17,7 @@
     <Compile Include="ApiTestFixture.fs" />
     <Compile Include="AddProductShould.fs" />
     <Compile Include="DetermineStockShould.fs" />
+    <Compile Include="MarkAsSoldOutShould.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Shopfoo.Product\Shopfoo.Product.fsproj" />
