--- a/tests/Shopfoo.Product.Tests/Shopfoo.Product.Tests.fsproj
+++ b/tests/Shopfoo.Product.Tests/Shopfoo.Product.Tests.fsproj
@@ -18,6 +18,7 @@
     <Compile Include="AddProductShould.fs" />
     <Compile Include="DetermineStockShould.fs" />
     <Compile Include="MarkAsSoldOutShould.fs" />
+    <Compile Include="SavePricesShould.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Shopfoo.Product\Shopfoo.Product.fsproj" />
