--- a/tests/Shopfoo.Product.Tests/Shopfoo.Product.Tests.fsproj
+++ b/tests/Shopfoo.Product.Tests/Shopfoo.Product.Tests.fsproj
@@ -11,9 +11,7 @@
   <ItemGroup>
     <Content Include="paket.references" />
     <Compile Include="Types.fs" />
-    <Compile Include="Fakes.fs" />
-    <Compile Include="FakeStoreClientMock.fs" />
-    <Compile Include="OpenLibraryClientMock.fs" />
+    <Compile Include="Helpers.fs" />
     <Compile Include="ApiTestFixture.fs" />
     <Compile Include="AddProductShould.fs" />
     <Compile Include="DetermineStockShould.fs" />
@@ -22,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Shopfoo.Product\Shopfoo.Product.fsproj" />
+    <ProjectReference Include="..\Shopfoo.Program.Tests\Shopfoo.Program.Tests.fsproj" />
     <ProjectReference Include="..\Shopfoo.Tests.Common\Shopfoo.Tests.Common.fsproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
