--- a/tests/Shopfoo.Program.Tests/Shopfoo.Program.Tests.fsproj
+++ b/tests/Shopfoo.Program.Tests/Shopfoo.Program.Tests.fsproj
@@ -10,7 +10,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="paket.references" />
-    <Compile Include="SagaUndoTests.fs" />
+    <Compile Include="Helpers.fs" />
+    <Compile Include="Mocks.fs" />
+    <Compile Include="OrderContext.fs" />
+    <Compile Include="OrderWorkflowSagaShould.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Shopfoo.Program\Shopfoo.Program.fsproj" />
