--- a/tests/Shopfoo.Program.Tests/Shopfoo.Program.Tests.fsproj
+++ b/tests/Shopfoo.Program.Tests/Shopfoo.Program.Tests.fsproj
@@ -12,9 +12,9 @@
     <Content Include="paket.references" />
     <Compile Include="Helpers.fs" />
     <Compile Include="Mocks.fs" />
-    <Compile Include="OrderContext\Types.fs" />
-    <Compile Include="OrderContext\Workflows.fs" />
-    <Compile Include="OrderContext\Data.fs" />
+    <Compile Include="OrderContext\OrderTypes.fs" />
+    <Compile Include="OrderContext\OrderWorkflows.fs" />
+    <Compile Include="OrderContext\OrderData.fs" />
     <Compile Include="OrderWorkflowSagaShould.fs" />
   </ItemGroup>
   <ItemGroup>
