--- a/tests/Shopfoo.Program.Tests/Shopfoo.Program.Tests.fsproj
+++ b/tests/Shopfoo.Program.Tests/Shopfoo.Program.Tests.fsproj
@@ -10,11 +10,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="paket.references" />
-    <Compile Include="Helpers.fs" />
-    <Compile Include="Mocks.fs" />
     <Compile Include="OrderContext\OrderTypes.fs" />
     <Compile Include="OrderContext\OrderWorkflows.fs" />
     <Compile Include="OrderContext\OrderData.fs" />
+    <Compile Include="Light.fs" />
+    <Compile Include="Mocks.fs" />
     <Compile Include="OrderWorkflowSagaShould.fs" />
   </ItemGroup>
   <ItemGroup>
