chore(CI): fix dotnet tests failing to Shopfoo.Tests.Common misconfigured

--- a/tests/Shopfoo.Tests.Common/Shopfoo.Tests.Common.fsproj
+++ b/tests/Shopfoo.Tests.Common/Shopfoo.Tests.Common.fsproj
@@ -3,8 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <IsPackable>false</IsPackable>
+    <IsTestProject>false</IsTestProject>
+    <OutputType>Library</OutputType>
     <GenerateProgramFile>false</GenerateProgramFile>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
+    <GenerateRuntimeConfigurationFiles>false</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="paket.references" />
