--- a/tests/Shopfoo.Product.Tests/Shopfoo.Product.Tests.fsproj
+++ b/tests/Shopfoo.Product.Tests/Shopfoo.Product.Tests.fsproj
@@ -9,9 +9,9 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Examples.fs" />
     <Compile Include="OpenLibrary\KeySanitizingShould.fs" />
     <Compile Include="Workflows\Types.fs" />
-    <Compile Include="Workflows\Helpers.fs" />
     <Compile Include="Workflows\ApiTestFixture.fs" />
     <Compile Include="Workflows\AddProductShould.fs" />
     <Compile Include="Workflows\DetermineStockShould.fs" />
