--- a/src/Shopfoo.Server/Shopfoo.Server.fsproj
+++ b/src/Shopfoo.Server/Shopfoo.Server.fsproj
@@ -32,6 +32,7 @@
     <Compile Include="Remoting\Prices\AdjustStockHandler.fs" />
     <Compile Include="Remoting\Prices\DetermineStockHandler.fs" />
     <Compile Include="Remoting\Prices\GetPricesHandler.fs" />
+    <Compile Include="Remoting\Prices\GetPurchasePricesHandler.fs" />
     <Compile Include="Remoting\Prices\SavePricesHandler.fs" />
     <Compile Include="Remoting\Prices\MarkAsSoldOutHandler.fs" />
     <Compile Include="Remoting\Prices\RemoveListPriceHandler.fs" />
