--- a/tests/Shopfoo.Product.Tests/Shopfoo.Product.Tests.fsproj
+++ b/tests/Shopfoo.Product.Tests/Shopfoo.Product.Tests.fsproj
@@ -16,6 +16,7 @@
     <Compile Include="Workflows\AddProductShould.fs" />
     <Compile Include="Workflows\DetermineStockShould.fs" />
     <Compile Include="Workflows\GetProductShould.fs" />
+    <Compile Include="Workflows\GetPurchasePricesShould.fs" />
     <Compile Include="Workflows\MarkAsSoldOutShould.fs" />
     <Compile Include="Workflows\SavePricesShould.fs" />
     <Content Include="paket.references" />
